syntax = "proto3";

option csharp_namespace = "AspNetGrpc.Greeter";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloAgain (HelloRequest) returns (stream HelloReply);
  rpc SayHelloToAll (stream HelloRequest) returns (HelloReply);
  rpc SayHelloToEveryone (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
